k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supersender
  namespace: supersender
spec:
  selector: { app: supersender }
  ports:
    - name: http
      port: 80
      targetPort: 3001
